Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 Sono rilasciati sotto licenza <a href="http://creativecommons.org/licenses/by-sa/3.0/deed.it">Creative Commons BY-SA</a>.</p>
 
 <p>Scarica da <a href="https://github.com/matteosecli/Appunti_di_Analisi_II/raw/master/book.pdf">qui</a> l'ultima versione già compilata (PDF).</p>
+
+<p>Versione corrente: 20130605-185603</p>
       </section>
     </div>
 
