Metatag for Google verification

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 </script>
 
+<meta name="google-site-verification" content="-1IAr6yozd8iJSkXjKBSeUAu15M0-ReonDeCBsKbypk" />
+
     <title>Appunti di Analisi II</title>
   </head>
 
