--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Sono rilasciati sotto licenza <a href="http://creativecommons.org/licenses/by-sa
 
 <p>Versione corrente: 20130625-173406</p>
 
+<iframe class="scribd_iframe_embed" src="http://www.scribd.com/embeds/154289319/content?start_page=1&view_mode=scroll&access_key=key-2byaz19f6r4m2gvh09jt&show_recommendations=false" data-auto-height="false" data-aspect-ratio="0.708006279434851" scrolling="no" id="doc_1592" width="100%" height="600" frameborder="0"></iframe>
+
 
       </section>
     </div>
